GTK+-3.20 TOK themes: fix jumping pathbar buttons

--- a/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
@@ -383,7 +383,6 @@ overshoot.right:backdrop {
     box-shadow: none;
 }
 
-
 /* result is disable undershoot */
 undershoot.top {
     background-color: transparent;
@@ -889,35 +888,37 @@ toolbar.horizontal combobox button.combo {
 }
 
 .path-bar button,
-.linked.path-bar button,
+.linked.path-bar > button,
 .path-bar button image,
 .path-bar button label {
-    padding: 4px 2px;
+    padding: 4px 3px;
 }
 
 .path-bar button {
-    border-width: 1px 0px 1px 1px;
+    border-width: 1px;
 }
 
-.linked.path-bar button.toggle,
-.linked.path-bar button.toggle:checked:hover, /* this is really weird */
-.linked.path-bar button.image-button,
-.linked.path-bar button.toggle.image-button,
-.linked.path-bar button.toggle.text-button {
+.linked.path-bar > button.toggle,
+.linked.path-bar > button.toggle:checked:hover, /* this is really weird */
+.linked.path-bar > button.image-button,
+.linked.path-bar > button.toggle.image-button,
+.linked.path-bar > button.toggle.text-button {
     border-width: 1px 1px 1px 0px;
 }
 
-.linked.path-bar button.toggle:first-child,
-.linked.path-bar button.image-button:first-child,
-.linked.path-bar button.toggle.image-button:first-child,
-.linked.path-bar button.toggle.text-button:first-child {
-    border-width: 1px 1px 1px 1px;
+.linked.path-bar > button.toggle:first-child,
+.linked.path-bar > button.image-button:first-child,
+.linked.path-bar > button.toggle.image-button:first-child,
+.linked.path-bar > button.toggle.text-button:first-child,
+.linked.path-bar > button.slider-button:first-child {
+    border-width: 1px;
 }
 
-.linked.path-bar button.toggle:last-child,
-.linked.path-bar button.image-button:last-child,
-.linked.path-bar button.toggle.image-button:last-child,
-.linked.path-bar button.toggle.text-button:last-child {
+.linked.path-bar > button.toggle:last-child,
+.linked.path-bar > button.image-button:last-child,
+.linked.path-bar > button.toggle.image-button:last-child,
+.linked.path-bar > button.toggle.text-button:last-child,
+.linked.path-bar > button.slider-button:last-child {
     border-width: 1px 1px 1px 0px;
 }
 
@@ -986,7 +987,7 @@ button .separator {
     border-radius: 0;
     border-color: @border_color;
     border-width: 1px;
-    padding: 4px 2px;
+    padding: 4px 3px;
 }
 
 .linked entry {
